k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srechallenge-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: srechallenge
  template:
    metadata:
      labels:
        app: srechallenge
    spec:
      containers:
        - name: srechallenge
          image: txtbits/srechallenge:0.1.0-SNAPSHOT
          args: ["--spring.config.location=/etc/srechallenge/application.properties"]
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config-vol
              mountPath: /etc/srechallenge
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
      volumes:
        - name: config-vol
          configMap:
            name: srechallenge-configs
---
apiVersion: v1
kind: Service
metadata:
  name: srechallenge-service
spec:
  type: LoadBalancer
  selector:
    app: srechallenge
  ports:
    - name: http
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srechallenge-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: srechallenge-service
              port:
                number: 8080
